feat: add import dashboard endpoint
