# spec/openapi.yaml
@@ -386,6 +386,42 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /import:
+    post:
+      summary: Import dashboard
+      operationId: importWidgetLayout
+      requestBody:
+        required: true
+        description: The dashboard template data to import
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ExportWidgetDashboardTemplateResponse'
+      responses:
+        '200':
+          description: Dashboard template import successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DashboardTemplate'
+        '403':
+          description: Unauthorized access to the dashboard template
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '400':
+          description: Bad request, possibly due to invalid template data
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
     Permission:
